// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /ajlb should get all ajlbs for an admin user 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "endDate": "2025-04-04",
    "flightTime": "40:45",
    "minutesAtStart": 2445,
    "noOfPages": 80,
    "rowsPerPage": 20,
    "seqNo": 1,
    "startDate": "2024-04-03",
    "startPage": 1,
  },
  {
    "aircraftRegistration": "OH-IHQ",
    "endDate": null,
    "flightTime": "6116:40",
    "minutesAtStart": 367000,
    "noOfPages": 90,
    "rowsPerPage": 25,
    "seqNo": 2,
    "startDate": "2025-04-04",
    "startPage": 81,
  },
  {
    "aircraftRegistration": "OH-P28",
    "endDate": null,
    "flightTime": "5228:20",
    "minutesAtStart": 313700,
    "noOfPages": 90,
    "rowsPerPage": 25,
    "seqNo": 4,
    "startDate": "2003-04-04",
    "startPage": 81,
  },
  {
    "aircraftRegistration": "OH-STL",
    "endDate": "2024-04-02",
    "flightTime": "10:10",
    "minutesAtStart": 610,
    "noOfPages": 100,
    "rowsPerPage": 25,
    "seqNo": 1,
    "startDate": "2023-04-01",
    "startPage": 1,
  },
  {
    "aircraftRegistration": "OH-STL",
    "endDate": "2025-04-02",
    "flightTime": "167:00",
    "minutesAtStart": 10020,
    "noOfPages": 120,
    "rowsPerPage": 30,
    "seqNo": 2,
    "startDate": "2024-04-02",
    "startPage": 101,
  },
  {
    "aircraftRegistration": "OH-STL",
    "endDate": null,
    "flightTime": "4783:20",
    "minutesAtStart": 287000,
    "noOfPages": 120,
    "rowsPerPage": 30,
    "seqNo": 3,
    "startDate": "2025-04-02",
    "startPage": 101,
  },
]
`;

exports[`GET /ajlb should get filtered ajlbs for an admin user 1`] = `
[
  {
    "aircraftRegistration": "OH-P28",
    "endDate": null,
    "flightTime": "5228:20",
    "minutesAtStart": 313700,
    "noOfPages": 90,
    "rowsPerPage": 25,
    "seqNo": 4,
    "startDate": "2003-04-04",
    "startPage": 81,
  },
]
`;

exports[`GET /ajlb should get latest ajlbs for an admin user 1`] = `
[
  {
    "aircraftRegistration": "OH-IHQ",
    "endDate": null,
    "flightTime": "6116:40",
    "minutesAtStart": 367000,
    "noOfPages": 90,
    "rowsPerPage": 25,
    "seqNo": 2,
    "startDate": "2025-04-04",
    "startPage": 81,
  },
  {
    "aircraftRegistration": "OH-P28",
    "endDate": null,
    "flightTime": "5228:20",
    "minutesAtStart": 313700,
    "noOfPages": 90,
    "rowsPerPage": 25,
    "seqNo": 4,
    "startDate": "2003-04-04",
    "startPage": 81,
  },
  {
    "aircraftRegistration": "OH-STL",
    "endDate": null,
    "flightTime": "4783:20",
    "minutesAtStart": 287000,
    "noOfPages": 120,
    "rowsPerPage": 30,
    "seqNo": 3,
    "startDate": "2025-04-02",
    "startPage": 101,
  },
]
`;
